added user ownership to all models, still needs fine tuning

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,6 @@
   <ul>
     <li><%= link_to 'Tasks', tasks_path %></li>
     <li><%= link_to 'Projects', projects_path %></li>
+    <li><%= link_to 'Contexts', contexts_path %></li>
   </ul>
 </nav>
